--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="first-row">
         <button id="r1-1" style="width: 138px;" onclick="forclear()">C</button>
         <button id="r1-3" onclick="perc()" >%</button>
-        <button id="r1-4">/</button>
+        <button id="r1-4" value="/" onclick="fordisplay('/')">/</button>
      </div><div class="second-row">
         <button id="r2-1" value="7" onclick="fordisplay('7')">7</button>
         <button id="r2-2" value="8" onclick="fordisplay('8')">8</button>
@@ -25,14 +25,14 @@
         <button id="r3-3" value="6" onclick="fordisplay('6')">6</button>
         <button id="r3-4" value="-" onclick="fordisplay('-')">-</button>
      </div><div class="fourth-row">
-        <button id="r4-1" value="7" onclick="fordisplay('7')">1</button>
-        <button id="r4-2" value="7" onclick="fordisplay('7')">2</button>
-        <button id="r4-3" value="7" onclick="fordisplay('7')">3</button>
+        <button id="r4-1" value="1" onclick="fordisplay('1')">1</button>
+        <button id="r4-2" value="2" onclick="fordisplay('2')">2</button>
+        <button id="r4-3" value="3" onclick="fordisplay('3')">3</button>
         <button id="r4-4" value="+" onclick="fordisplay('+')">+</button>
      </div><div class="fifth-row">
-    <button id="r5-1" style="width: 138px;">0</button>
-       <button id="r5-2" >.</button>
-       <button id="r5-3" value="=" onclick="solve()">=</button>
+        <button id="r5-1" style="width: 138px;">0</button>
+        <button id="r5-2" value="." onclick="fordisplay('.')">.</button>
+        <button id="r5-3" value="=" onclick="solve()">=</button>
      </div>
      
 </div>
